# OSS_autoUI_TB

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  pytest.ini  requirements.txt  runner.py
config/: settings.py
pages/: base_page.py  header.py  login_page.py
pages/admin/: header.py  login_page.py
pages/components/: header.py
pages/level1_menu/level2_menu/: detail_page.py  main_page.py  tab1.py  tab2.py  tab3.py
pages/primary/: header.py  login_page.py
pages/sub/: header.py
tests/: conftest.py  test_main.py
utils/: allure_helper.py  booking_helper.py  captcha_solver.py  data_generator.py  db_client.py  file_util.py  wecom_notifier.py
