[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ossautoui"
version = "0.1.0"
description = "OSS 自动化 UI 测试框架"
requires-python = ">=3.13"
dependencies = [
    "playwright",
    "pytest",
    "pytest-playwright",
    "allure-pytest",
    "allure-python-commons",
    "allure-combine",
    "python-dotenv",
    "PyYAML",
    "ddddocr",
    "Pillow",
    "pymysql",
    "pytest-xdist",
    "pytest-repeat",
    "pytest-rerunfailures",
]

[tool.setuptools.packages.find]
include = ["pages*", "config*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "--headed --slowmo=500 -v --tb=short --strict-markers --import-mode=importlib"
